# sciona-atoms

./: AGENTS.md  AGENT_INGESTION.md  CDG_PROMPT.md  CONTRIBUTION.md  CS_GAP.md  INGESTION.md  PUBLISHING.md  README.md  REMEDIATION.md  pyproject.toml
data/: audit_manifest.json
docs/: REMEDIATION_REINGEST_SOURCE_MAP.md  RENAMING_ATOMS.md  SUPABASE_REPLAY.md
scripts/: apply_audit_review_bundles.py  contributionlib.py  migrate_registry.py  refresh_publishability_review_docs.py  supabase_backfill.py  supabase_license_metadata.py  supabase_provider_inventory.py  supabase_seed.py  validate_dejargon.py  validate_solution_cdgs.py  verify_contribution_rules.py
tests/: test_advancedvi_import_smoke.py  test_audit_review_bundles.py  test_baseline_atoms.py  test_baseline_scoring_atoms.py  test_bayes_rs_import_smoke.py  test_belief_propagation_expansion_review_bundle.py  test_belief_propagation_import_smoke.py  test_belief_propagation_references_metadata.py  test_belief_propagation_review_bundle.py  test_biosppy_ecg_atoms.py  test_biosppy_ecg_probes.py  test_causal_inference_conditional_statistics_behavior.py  test_causal_inference_conditional_statistics_references_metadata.py  test_causal_inference_conditional_statistics_review_bundle.py  test_causal_inference_estimators_behavior.py  test_causal_inference_estimators_references_metadata.py  test_causal_inference_estimators_review_bundle.py  test_causal_inference_feature_primitives_behavior.py  test_causal_inference_feature_primitives_references_metadata.py  test_causal_inference_feature_primitives_review_bundle.py  (+115 more)
(+476 files in other folders)
