[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciona-atoms-signal-processing"
version = "0.1.0"
description = "Namespace-first pilot repo for signal-processing atoms and probes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "biosppy",
  "icontract",
  "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
